--- a/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/email-verification/email-verification.component.html
@@ -102,7 +102,7 @@
 </div> -->
 
 
-<!-- <body id="back">
+<body id="back">
 
   <div class="container py-5 h-50">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -138,7 +138,7 @@
   </div>
 </div>
 
-</body> -->
+</body>
 
 
 
@@ -147,15 +147,11 @@
 
 
 
-
-
-
-<section style="background-image: url('https://e0.pxfuel.com/wallpapers/12/182/desktop-wallpaper-business-best-business-and-on-chat-corporate-meeting.jpg'); background-size: cover; background-repeat: no-repeat; width: 100%; backdrop-filter : blur(10px); ">
+<!-- section style="background-image: url('https://e0.pxfuel.com/wallpapers/12/182/desktop-wallpaper-business-best-business-and-on-chat-corporate-meeting.jpg'); background-size: cover; background-repeat: no-repeat; width: 100%; backdrop-filter : blur(10px); ">
   <div class="container" >
     <div class="card"  style="background-color: #f0f0f0;">
       <div class="card-body">
         <h2 class="h2 fw-bold mb-0">Email Verification</h2>
-
         <form [formGroup]="emailForm" (ngSubmit)="onConfirmEmail()" class="w-100 mt-2">
           <div data-mdb-input-init class="form-outline mb-4">
             <label for="email" class="col-sm-3 col-form-label">Email:</label>
@@ -164,7 +160,6 @@
                 <div *ngIf="isInvalid('email')" class="text-danger">
                     {{ getErrorMessage('email') }}
                 </div>
-<<<<<<< HEAD
             </div>
           </div>
           <div data-mdb-input-init class="form-outline mb-4">
@@ -179,33 +174,8 @@
           <button type="submit" class="btn btn-primary mx-1">Verify OTP</button>
           <button type="button" class="btn btn-secondary" (click)="onResendOtp()">Resend OTP</button>
         </form>
-
-
-        <!-- <form [formGroup]="emailForm" (ngSubmit)="onConfirmEmail()" class="w-100 mt-2">
-          <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
-            <div *ngIf="isInvalid('email')" class="text-danger">
-              {{ getErrorMessage('email') }}
-=======
->>>>>>> baac47de9584d281ce54e070f1ed2d89e3861a12
-            </div>
-          </div>
-          <div data-mdb-input-init class="form-outline mb-4">
-            <label for="email" class="col-sm-3 col-form-label">OTP:</label>
-            <div class="col-sm-9" id="inputfield" >
-            <input type="text" formControlName="otp" placeholder="6-digit OTP" class="form-control form-select-lg" maxlength="6">
-            <div *ngIf="isInvalid('otp')" class="text-danger">
-              {{ getErrorMessage('otp') }}
-          </div>
-        </div>
-          </div>
-          <button type="submit" class="btn btn-primary mx-1">Verify OTP</button>
-          <button type="button" class="btn btn-secondary" (click)="onResendOtp()">Resend OTP</button>
-        </form> -->
-
       </div>
     </div>
   </div>
 
-</section>
+</section> -->
