--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
@@ -4,10 +4,8 @@
     <div class="container-fluid">
       <!-- Centered brand -->
       <!-- <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a> -->
-      <a class="navbar-brand d-flex align-items-center mx-auto" routerLink="/home">
-        <!-- <img src="assets/images/ors-logo.png" alt="RecruitHub Logo" style="height: 30px; margin-right: 10px;">
-        <img src="./images/ors-logo.png" alt="RecruitHub Logo" style="height: 30px; margin-right: 10px;"> -->
-      </a>
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
+
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -18,22 +16,19 @@
       <!-- Navigation items -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto"> <!-- Centering the list -->
-
+          <!-- Home -->
+          <!-- *ngIf="currentRoute !== '/home'" -->
           <li class="nav-item" >
             <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
           </li>
 
-
-          <li class="nav-item" >
-            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="post()">Post Job</a>
-          </li>
-
+          <a class="nav-link"  (click)="post()" routerLinkActive="active">Post Jobs</a>
 
 
           <!-- Search Jobs -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item" >
-            <a class="nav-link"  routerLink="/home/{{roleIdString}}"  (click)=jobsforyou() routerLinkActive="active">Jobs for you</a>
+            <a class="nav-link" (click)=jobsforyou() routerLinkActive="active">Jobs for you</a>
           </li>
 
 
@@ -79,6 +74,8 @@
     </div>
   </nav>
 </div>
+
+
 
 
 
