--- a/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.css
@@ -50,11 +50,11 @@ background: #eee;
 .nav-item.active a, .nav-item a:hover , .input-group-append .btn:hover, .input-group-append .btn.active  {
   background-color: white;
   color: #113f5f;
-  border-radius: 5px;
-  margin : 5px;
+  /* border-radius: 5px;
+  margin : 5px; */
 }
 
-.nav-link, .text-1{
+/* .nav-link, .text-1{
   color: rgb(250, 248, 248);
   font-weight: bold;
-}
+} */
