--- a/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.css
@@ -1,6 +1,6 @@
-/* #inputfield{
+#inputfield{
     width: 100%;
-} */
+}
 
 .input-outline{
   border: 1px solid #050e17; /* Change the color as needed */
