--- a/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
@@ -2,7 +2,8 @@
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
     <div class="container-fluid">
       <!-- Centered brand -->
-      <a class="navbar-brand mx-auto" routerLink="/home">Online Recruitment System</a>
+      <!-- <a class="navbar-brand mx-auto" routerLink="/home">Online Recruitment System</a> -->
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -17,11 +18,11 @@
           <!-- *ngIf="currentRoute !== '/home'" -->
           <li class="nav-item" >
             <a class="nav-link" *ngIf="studentId?.startsWith('GRAD')" routerLink="/gradhome/{{studentId}}" routerLinkActive="active">Home</a>
-      
+
           </li>
 
-         
-         
+
+
 
 
           <!-- Services -->
