--- a/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/home/home.component.html
@@ -22,11 +22,11 @@
           </li>
 
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="post()">Post Jobs</a>
+            <a class="nav-link" routerLink="/home/{{roleIdString}}" (click)="post()">Post Jobs</a>
           </li>
 
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active"  (click)="postappoint()">Appointments</a>
+            <a class="nav-link" routerLink="/home/{{roleIdString}}"  (click)="postappoint()">Appointments</a>
           </li>
 
 
