resolved navbar and Contact us

--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
@@ -15,11 +15,7 @@
       <!-- Navigation items -->
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto"> <!-- Centering the list -->
-          <!-- Home -->
-          <!-- *ngIf="currentRoute !== '/home'" -->
-          <li class="nav-item" >
-            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
-          </li>
+          
 
 
          
@@ -67,7 +63,7 @@
       <div class="sidebar-sticky">
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center text-1">
-          <span routerLink="/home">MENU</span>
+          <span >MENU</span>
         </h6>
 
 
