--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admininbox/admininbox.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admininbox/admininbox.component.css
@@ -11,11 +11,9 @@
     color: #495057;
   }
   
-  .btn-dark {
-
-    margin-left: 90%;
-  }
-  
+ .buttons{
+  margin-left: 80%;
+ }
  
   
   h2 {
