--- a/NewFirstevaluation/Frontend_Angular/src/app/components/grad-dash/grad-dash.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/grad-dash/grad-dash.component.html
@@ -48,7 +48,7 @@
             <td>{{graduate?.user?.phone}}</td>
             <td>
               <button class="btn btn-info btn-sm mx-2"(click)="infoGradute(graduate)" > More Details</button>
-              <button class="btn btn-success btn-sm mx-2" (click)="editGraduate(graduate)">Edit</button>
+              <!-- <button class="btn btn-success btn-sm mx-2" (click)="editGraduate(graduate)">Edit</button> -->
               <button class="btn btn-danger btn-sm " (click)="deleteGraduate(graduate.roleId.roleId)">Delete</button>
             </td>
           </tr>
@@ -68,22 +68,33 @@
         <button type="button" class="btn btn-close" (click)="closeModal()"></button>
       </div>
       <div class="modal-body">
-        <p><strong>Grad ID:</strong> {{ selectedGraduate.roleId.roleId }}</p>
-        <p><strong>Name:</strong> {{ selectedGraduate.user?.name }}</p>
-        <p><strong>Email:</strong> {{ selectedGraduate.user.email }}</p>
-        <p><strong>Address:</strong> {{ selectedGraduate.user.address }}</p>
-        <p><strong>Phone:</strong> {{ selectedGraduate.user.phone }}</p>
-        <p><strong>Nationality:</strong> {{ selectedGraduate.user.nationality }}</p>
-        <p><strong>City:</strong> {{ selectedGraduate.city }}</p>
-        <p><strong>State:</strong> {{ selectedGraduate.state }}</p>
-        <p><strong>PinCode:</strong> {{ selectedGraduate.pinCode }}</p>
-        <p><strong>YearOfPassing:</strong> {{ selectedGraduate.yearOfPassing}}</p>
-        <p><strong>Cgpa:</strong> {{ selectedGraduate.cgpa }}</p>
-        <p><strong>College Name :</strong> {{selectedGraduate.college.collegeName}}</p>
-        <p><strong>College Description :</strong> {{selectedGraduate.college.collegeDescription}}</p>
-        <p><strong>College Address :</strong> {{selectedGraduate.college.collegeAddress}}</p>
+        <div class="row">
+        <p class="col-4"><strong>Grad ID:</strong> {{ selectedGraduate.roleId.roleId }}</p>
+        <p class="col-4"><strong>Name:</strong> {{ selectedGraduate.user?.name }}</p>
+        <p class="col-4"><strong>Email:</strong> {{ selectedGraduate.user.email }}</p>
+        </div>
+        <div class="row">
+        <p class="col-4"><strong>Address:</strong> {{ selectedGraduate.user.address }}</p>
+        <p class="col-4"><strong>Phone:</strong> {{ selectedGraduate.user.phone }}</p>
+        <p class="col-4"><strong>Nationality:</strong> {{ selectedGraduate.user.nationality }}</p>
+        </div>
+        <div class="row">
+        <p class="col-4"><strong>City:</strong> {{ selectedGraduate.city }}</p>
+        <p class="col-4"><strong>State:</strong> {{ selectedGraduate.state }}</p>
+        <p class="col-4"><strong>PinCode:</strong> {{ selectedGraduate.pinCode }}</p>
+        </div>
+        <div class="row">
+        <p class="col-4"><strong>YearOfPassing:</strong> {{ selectedGraduate.yearOfPassing}}</p>
+        <p class="col-4"><strong>Cgpa:</strong> {{ selectedGraduate.cgpa }}</p>
+        <p class="col-4"><strong>College Name :</strong> {{selectedGraduate.college.collegeName}}</p>
+        </div>
+        <div class="row">
+          <p class="col-4"><strong>College Address :</strong> {{selectedGraduate.college.collegeAddress}}</p>
+          <p class="col-8"><strong>College Description :</strong> {{selectedGraduate.college.collegeDescription}}</p>
+        </div>
       </div>
       <div class="modal-footer">
+        
       </div>
     </div>
   </div>
