--- a/NewFirstevaluation/Frontend_Angular/src/app/components/not-scheduled/not-scheduled.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/not-scheduled/not-scheduled.component.html
@@ -90,11 +90,11 @@
         <h5 class="modal-title">Confirm Delete</h5>
       </div>
       <div class="modal-body">
-        <p>Are you sure you want to delete this item?</p>
+        <p>Are you sure you want to Reject This Application?</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="closeModalforreject()">Cancel</button>
-        <button type="button" class="btn btn-danger" (click)="deleteappointbyId(selectedforreject.applicantId)" >Delete</button>
+        <button type="button" class="btn btn-danger" (click)="deleteappointbyId(selectedforreject.applicantId)" >Reject</button>
       </div>
     </div>
   </div>
