--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-login/admin-login.component.html
@@ -21,44 +21,16 @@
             <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active">Home</a>
           </li>
 
-
-          <li class="nav-item" >
-            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="post()">Post Jobs</a>
-          </li>
-
-          <li class="nav-item" >
-            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="postappoint()">Appointments</a>
-          </li>
-
-          <li class="nav-item" >
-            <a class="nav-link" routerLink="/home/{{roleIdString}}" routerLinkActive="active" (click)="jobsforyou()">Explore Jobs</a>
-          </li>
-
-
-
-          <!-- Search Jobs -->
-          <!-- *ngIf="currentRoute !== '/job-search'" -->
-
-
-
-          <!-- Services -->
-          <!-- *ngIf="currentRoute !== '/job-search'" -->
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
-          </li>
-
-
           <!-- Blog  -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item" >
             <a class="nav-link" routerLink="/blogs" routerLinkActive="active">Blogs</a>
           </li>
 
-
           <!-- About Us -->
           <!-- *ngIf="currentRoute !== '/login'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
+            <a class="nav-link" routerLink="/about-us" routerLinkActive="active">About Us</a>
           </li>
 
         </ul>
