--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admininbox/admininbox.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admininbox/admininbox.component.html
@@ -6,7 +6,10 @@
           <h5 class="card-title fs-5">Sent By: {{ message.senderId }}</h5>
           <p class="card-text">Message:</p>
           <p class="card-text">{{ message.message }}</p>
-          <button class="btn btn-dark " (click)="Replymessage(message)">Reply</button>
+          <div class="buttons">
+          <button class="btn btn-dark mx-2 " (click)="Replymessage(message)">Reply</button>
+          <button class="btn btn-danger " (click)="deletemessage(message.id)">Delete</button>
+        </div>
         </div>
       </div>
     </div>
