--- a/NewFirstevaluation/Frontend_Angular/src/app/components/grad-dash/grad-dash.component.css
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/grad-dash/grad-dash.component.css
@@ -47,7 +47,7 @@
   z-index: 1;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 200%;
   height: 100%;
   background-color: rgba(0,0,0,0.4);
   justify-content: center;
@@ -64,7 +64,7 @@
   align-items: center;
   justify-content: center;
   width: auto;
-  max-width:900px;
+  max-width:1000px;
   margin: 0;
   padding-left: 30px;
   overflow: auto;
@@ -77,7 +77,7 @@
   border-radius: 5px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  width: 100%;
+  width: 1000px;
   display:inline-block;
   animation: fadeIn 0.3s;
   position: relative;
