--- a/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/login/login.component.html
@@ -2,8 +2,7 @@
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
     <div class="container-fluid">
       <!-- Centered brand -->
-      <img src="" alt="">
-      <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a>
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -30,11 +29,7 @@
           </li> -->
 
 
-          <!-- Services -->
-          <!-- *ngIf="currentRoute !== '/job-search'" -->
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
-          </li>
+         
 
 
           <!-- Blog  -->
