--- a/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-sm navbar-light" style="background : #113f5f;">
     <div class="container-fluid">
       <!-- Centered brand -->
-      <a class="navbar-brand mx-auto" routerLink="/home">Online Recruitment System</a>
+      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -29,12 +29,7 @@
           </li> -->
 
 
-          <!-- Services -->
-          <!-- *ngIf="currentRoute !== '/job-search'" -->
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
-          </li>
-
+          
 
           <!-- Blog  -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
@@ -53,7 +48,7 @@
             <a class="nav-link" routerLink="/login"  routerLinkActive="active">Login</a>
           </li>
 
-          <li>
+          <li class="nav-item">
             <a class="nav-link"  routerLink="/register"  routerLinkActive="active">Register</a>
           </li>
         </ul>
