--- a/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/jobdescription/jobdescription.component.html
@@ -22,27 +22,17 @@
           </li>
 
 
-
-
-
-          <!-- Services -->
-          <!-- *ngIf="currentRoute !== '/job-search'" -->
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
-          </li>
-
-
           <!-- Blog  -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/blogs" routerLinkActive="active">Blogs</a>
+            <a class="nav-link" routerLink="/blogs/{{studentId}}" routerLinkActive="active">Blogs</a>
           </li>
 
 
           <!-- About Us -->
           <!-- *ngIf="currentRoute !== '/login'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
+            <a class="nav-link" routerLink="/about-us/{{studentId}}" routerLinkActive="active">About Us</a>
           </li>
 
           <li class="nav-item" >
