--- a/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/admin-dash/admin-dash.component.html
@@ -77,9 +77,9 @@
           <li class="nav-item" [class.active]="isActive('/admin-dash/employers')">
             <a class="nav-link" routerLink="/admin-dash/employers">Employers</a>
           </li>
-          <li class="nav-item" [class.active]="isActive('/admin-dash/jobs')">
+          <!-- <li class="nav-item" [class.active]="isActive('/admin-dash/jobs')">
             <a class="nav-link" routerLink="/admin-dash/jobs">Jobs</a>
-          </li>
+          </li> -->
           <li class="nav-item" [class.active]="isActive('/admin-dash/inbox')">
             <a class="nav-link" routerLink="/admin-dash/admininbox">Inbox</a>
           </li>
