--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
@@ -62,7 +62,7 @@
         <!-- Green dot for logged-in status -->
         <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
-      <a class="nav-link" *ngIf="roleIdString.startsWith('EMP')" routerLink="/home" >Logout</a>
+      <a class="nav-link" *ngIf="roleIdString.startsWith('EMP')" (click)="logout()" >Logout</a>
     </div>
   </nav>
 </div>
