--- a/NewFirstevaluation/Frontend_Angular/src/app/components/about-us/about-us.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/about-us/about-us.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
       <!-- Centered brand -->
       <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
-     
+
 
       <!-- Toggler button for small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -37,7 +37,7 @@
 
           <!-- Services -->
           <!-- *ngIf="currentRoute !== '/job-search'" -->
-          
+
 
 
           <!-- Blog  -->
@@ -65,9 +65,9 @@
         <!-- Green dot for logged-in status -->
         <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
-      <a class="nav-link" *ngIf="roleIdString.startsWith('EMP')" routerLink="/home" >Logout</a>
+      <a class="nav-link" *ngIf="roleIdString.startsWith('EMP')" (click)="logout()" >Logout</a>
     </div>
-    
+
   </nav>
 </div>
 
