--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
@@ -38,7 +38,7 @@
           </li>
         </ul>
       </div>
-      <a class="nav-link" *ngIf="(roleIdString?.startsWith('GRAD'))" routerLink="/home">Logout</a>
+      <a class="nav-link" *ngIf="(roleIdString?.startsWith('GRAD'))" (click)="logout()">Logout</a>
     </div>
   </nav>
 </div>
