--- a/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/stud-register/stud-register.component.html
@@ -50,7 +50,7 @@
         <!-- Green dot for logged-in status -->
         <!-- <span *ngIf="isLoggedIn" class="green-dot"></span> -->
       </div>
-      <a class="nav-link" *ngIf="roleIdString?.startsWith('GRAD')" routerLink="/home" >Logout</a>
+      <a class="nav-link" *ngIf="roleIdString?.startsWith('GRAD')" (click)="logout()" >Logout</a>
     </div>
   </nav>
 </div>
