--- a/NewFirstevaluation/Frontend_Angular/src/app/components/messagedash/messagedash.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/messagedash/messagedash.component.html
@@ -19,14 +19,8 @@
               <a class="nav-link" routerLink="/gradhome/{{roleIdString}}" routerLinkActive="active">Home</a>
             </li>
 
-
-
-
-
-            <!-- Services -->
-            <!-- *ngIf="currentRoute !== '/job-search'" -->
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/services" routerLinkActive="active">Services</a>
+            <li class="nav-item" >
+              <a class="nav-link" routerLink="/gradmessage/{{roleIdString}}" routerLinkActive="active">Contact Us</a>
             </li>
 
 
