--- a/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/emp-home-page/emp-home-page.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
       <!-- Centered brand -->
       <!-- <a class="navbar-brand mx-auto" routerLink="/home">RecruitHub</a> -->
-      <img src="assets/ors-logo.png" alt="logo" style="height: 55px; width:190px; margin-right: 10px;">
+      <img src="assets/ors-logo.png" alt="logo" class="mb-0" style="height: 55px; width:190px; margin-right: 10px;">
 
 
       <!-- Toggler button for small screens -->
