--- a/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/registration/registration.component.html
@@ -41,7 +41,7 @@
           <!-- About Us -->
           <!-- *ngIf="currentRoute !== '/login'" -->
           <li class="nav-item" >
-            <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active">About Us</a>
+            <a class="nav-link" routerLink="/about-us" routerLinkActive="active">About Us</a>
           </li>
 
           <li class="nav-item" >
