--- a/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/job-seeker/job-seeker.component.html
@@ -16,7 +16,8 @@
           <!-- Centering the list -->
           <!-- Home -->
           <li class="nav-item">
-            <a class="nav-link" *ngIf="roleIdString?.startsWith('GRAD')" routerLink="/gradhome/{{roleIdString}}" routerLinkActive="active">Home</a>
+            <a class="nav-link" *ngIf="roleIdString?.startsWith('GRAD')" routerLink="/gradhome/{{roleIdString}}"
+              routerLinkActive="active">Home</a>
           </li>
 
           <!-- Blog -->
@@ -34,7 +35,8 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" *ngIf="!(roleIdString?.startsWith('GRAD'))" routerLink="/register" routerLinkActive="active">Register</a>
+            <a class="nav-link" *ngIf="!(roleIdString?.startsWith('GRAD'))" routerLink="/register"
+              routerLinkActive="active">Register</a>
           </li>
         </ul>
       </div>
@@ -43,19 +45,20 @@
   </nav>
 </div>
 
-<section class="job-div">
-  <div class="container-fluid py-2">
-    <div class="row">
-      <div class="col-md-8">
-        <div id="formcard" class="card">
-          <div class="card-body">
-            <h3 style="font-weight: bolder;">Job Seeker Form</h3>
+<section class="background">
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-md-7">
+        <div class="card">
+          <div class="card-body" style="background-color: rgb(221, 221, 237);">
+            <h3 class="text-center mt-3 fw-bold" style="color: #113f5f;">Apply for the Job</h3>
             <form [formGroup]="jobSeekerForm" (ngSubmit)="onSubmit()" novalidate>
               <!-- Full Name -->
-              <div class="form-outline mb-2">
+              <div class="form-outline mb-2 row">
                 <label for="fullName" class="col-sm-3 col-form-label">Name:</label>
-                <div class="col-sm-9" id="inputfield">
-                  <input type="text" class="form-control form-select-lg" id="name" formControlName="fullName" placeholder="Full Name">
+                <div class="col-sm-9">
+                  <input type="text" class="form-control form-select-lg input-text" id="name" formControlName="fullName"
+                    placeholder="Full Name">
                   <div *ngIf="isInvalid('fullName')" class="text-danger">
                     {{ getErrorMessage('fullName') }}
                   </div>
@@ -63,21 +66,23 @@
               </div>
 
               <!-- Email -->
-              <div class="form-outline mb-2">
+              <div class="form-outline mb-2 row">
                 <label for="email" class="col-sm-3 col-form-label">Email:</label>
-                <div class="col-sm-9" id="inputfield">
-                  <input type="email" class="form-control form-select-lg" id="email" formControlName="email" placeholder="Email">
+                <div class="col-sm-9">
+                  <input type="email" class="form-control form-select-lg input-text" id="email" formControlName="email"
+                    placeholder="Email">
                   <div *ngIf="isInvalid('email')" class="text-danger">
                     {{ getErrorMessage('email') }}
                   </div>
                 </div>
               </div>
 
-              <!-- Phone Number-->
-              <div class="form-outline mb-2">
+              <!-- Phone Number -->
+              <div class="form-outline mb-2 row">
                 <label for="phone" class="col-sm-3 col-form-label">Phone No:</label>
-                <div class="col-sm-9" id="inputfield">
-                  <input type="number" class="form-control form-select-lg" id="phone" formControlName="phone" placeholder="Phone">
+                <div class="col-sm-9">
+                  <input type="number" class="form-control form-select-lg input-text" id="phone" formControlName="phone"
+                    placeholder="Phone">
                   <div *ngIf="isInvalid('phone')" class="text-danger">
                     {{ getErrorMessage('phone') }}
                   </div>
@@ -85,10 +90,11 @@
               </div>
 
               <!-- Year of Passing -->
-              <div class="form-outline mb-2">
-                <label for="yearOfPassing" class="col-sm-3 col-form-label">Year of Passing</label>
-                <div class="col-sm-9" id="inputfield">
-                  <select id="yearOfPassing" formControlName="yearOfPassing" class="form-select form-select-lg" required>
+              <div class="form-outline mb-2 row">
+                <label for="yearOfPassing" class="col-sm-3 col-form-label"> Passing Year:</label>
+                <div class="col-sm-9">
+                  <select id="yearOfPassing" formControlName="yearOfPassing" class="form-select form-select-lg input-text"
+                    required>
                     <option value="" disabled selected>Select Year</option>
                     <option value="2019">2019</option>
                     <option value="2020">2020</option>
@@ -104,10 +110,10 @@
               </div>
 
               <!-- CGPA -->
-              <div class="form-outline mb-2">
-                <label for="cgpa" class="col-sm-3 col-form-label">CGPA</label>
-                <div class="col-sm-9" id="inputfield">
-                  <select id="cgpa" formControlName="cgpa" class="form-select form-select-lg" required>
+              <div class="form-outline mb-2 row">
+                <label for="cgpa" class="col-sm-3 col-form-label">CGPA:</label>
+                <div class="col-sm-9">
+                  <select id="cgpa" formControlName="cgpa" class="form-select form-select-lg input-text" required>
                     <option value="" disabled selected>Select CGPA</option>
                     <option value="1-2">1 - 2</option>
                     <option value="2-3">2 - 3</option>
@@ -126,10 +132,11 @@
               </div>
 
               <!-- Language -->
-              <div class="form-outline mb-2">
+              <div class="form-outline mb-2 row">
                 <label for="language" class="col-sm-3 col-form-label">Language:</label>
-                <div class="col-sm-9" id="inputfield">
-                  <input type="text" class="form-control form-select-lg" id="language" formControlName="language" placeholder="Language">
+                <div class="col-sm-9">
+                  <input type="text" class="form-control form-select-lg input-text" id="language" formControlName="language"
+                    placeholder="Language">
                   <div *ngIf="isInvalid('language')" class="text-danger">
                     {{ getErrorMessage('language') }}
                   </div>
@@ -137,10 +144,11 @@
               </div>
 
               <!-- Key Skill -->
-              <div class="form-outline mb-2">
-                <label for="keyskill" class="col-sm-3 col-form-label">Key Skill</label>
-                <div class="col-sm-9" id="inputfield">
-                  <input type="text" class="form-control form-select-lg" id="keyskill" formControlName="keySkill" placeholder="Key Skill">
+              <div class="form-outline mb-2 row">
+                <label for="keyskill" class="col-sm-3 col-form-label">Key Skill:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control form-select-lg input-text" id="keyskill" formControlName="keySkill"
+                    placeholder="Key Skill">
                   <div *ngIf="isInvalid('keySkill')" class="text-danger">
                     {{ getErrorMessage('keySkill') }}
                   </div>
@@ -148,10 +156,11 @@
               </div>
 
               <!-- Areas of Interest -->
-              <div class="form-outline mb-2">
-                <label for="areaOfInterest" class="col-sm-3 col-form-label">Areas of Interest:</label>
-                <div class="col-sm-9" id="inputfield">
-                  <input type="text" class="form-control form-select-lg" id="areaOfInterest" formControlName="areaOfInterest" placeholder="Areas of Interest">
+              <div class="form-outline mb-2 row">
+                <label for="areaOfInterest" class="col-sm-3 col-form-label">Interest:</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control form-select-lg input-text" id="areaOfInterest"
+                    formControlName="areaOfInterest" placeholder="Area of Interest">
                   <div *ngIf="isInvalid('areaOfInterest')" class="text-danger">
                     {{ getErrorMessage('areaOfInterest') }}
                   </div>
@@ -159,10 +168,11 @@
               </div>
 
               <!-- Project -->
-              <div class="form-outline mb-2">
-                <label for="project" class="col-sm-3 col-form-label">Project</label>
-                <div class="col-sm-9" id="inputfield">
-                  <textarea rows="5" cols="33" class="form-control form-select-lg" id="project" formControlName="project" placeholder="Project"></textarea>
+              <div class="form-outline mb-2 row">
+                <label for="project" class="col-sm-3 col-form-label">Project:</label>
+                <div class="col-sm-9">
+                  <textarea rows="5" cols="33" class="form-control form-select-lg input-text" id="project"
+                    formControlName="project" placeholder="Project"></textarea>
                   <div *ngIf="isInvalid('project')" class="text-danger">
                     {{ getErrorMessage('project') }}
                   </div>
@@ -170,48 +180,18 @@
               </div>
 
               <!-- Resume -->
-              <div class="form-outline mb-2">
-                <label for="resume" class="col-sm-3 col-form-label">Upload Your Resume:</label>
-                <div class="col-sm-9" id="inputfield">
-                  <input type="file" class="form-control form-select-md" id="resume" (change)="onFileChange($event)" accept=".pdf,.doc,.docx">
-                  <div *ngIf="isInvalid('resume')" class="text-danger">
-                    {{ getErrorMessage('resume') }}
-                  </div>
+              <div class="form-outline mb-2 row">
+                <label for="resume" class="col-sm-3 col-form-label">Upload Resume:</label>
+                <div class="col-sm-9">
+                  <input type="file" class="form-control form-select-md input-text" id="resume" (change)="onFileChange($event)"
+                    accept=".pdf">
                 </div>
               </div>
 
-              <!-- Submit Button -->
-              <div class="form-outline mb-2">
-                <div class="col-sm-10 d-grid gap-2 d-md-flex justify-content-md-end">
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+              <div class="text-center mt-3">
+                <button type="submit" class="btn btn-primary w-100">Submit</button>
               </div>
             </form>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div id="sidebar" class="card" style="color: rgb(18, 26, 99);">
-          <div class="card-body">
-            <h1 class="h2 fw-bold mb-4">Sponsors</h1>
-            <ul class="list-unstyled">
-              <li>HCL Technology - Over 6,000+ Premium Jobs</li>
-              <hr>
-              <li>Infosys - Premium Jobs</li>
-              <hr>
-              <li>Wipro - Premium Jobs</li>
-              <hr>
-              <li>Accenture - Premium Jobs</li>
-              <hr>
-              <li>Atos - Premium Jobs</li>
-              <hr>
-              <li>TCS - Premium Jobs</li>
-              <hr>
-            </ul>
-            <h1 class="h2 fw-bold mb-4">Wise Words</h1>
-            <p class="mb-0">"Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it."</p>
-            <p class="text-end">-Steve Jobs</p>
           </div>
         </div>
       </div>
